--- a/forms-td-assignment/package.json
+++ b/forms-td-assignment/package.json
@@ -29,7 +29,7 @@
     "@angular-devkit/build-angular": "^0.1100.4",
     "@angular/cli": "^11.0.4",
     "@angular/compiler-cli": "^11.0.5",
-    "@types/jasmine": "~3.6.0",
+    "@types/jasmine": ">=3.8.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.19.9",
     "codelyzer": "^6.0.1",
